[package]
name = "osu-ipc-rust"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cpu-endian = "0.1.1"
log = "0.4.17"
rosu-pp = "0.9.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
simplelog = "0.12.0"
ureq = "2.5.0"
version-compare = "0.1.0"
